--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.12.6",
     "ethers": "^5.7.2",
     "next": "^12.3.1",
     "next-seo": "^5.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "wagmi": "^0.12.9",
     "web3modal": "^1.9.12"
   }
 }
